--- a/server/pom.xml
+++ b/server/pom.xml
@@ -38,7 +38,12 @@
             <version>2.0.1</version>
         </dependency>
 
-
+        <dependency>
+            <!-- jsoup HTML parser library @ https://jsoup.org/ -->
+            <groupId>org.jsoup</groupId>
+            <artifactId>jsoup</artifactId>
+            <version>1.14.3</version>
+        </dependency>
 
         <dependency>
             <groupId>org.apache.commons</groupId>
